Ingress/ingress-controller/magical-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magicalnginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magical-nginx
  template:
    metadata:
      labels:
        app: magical-nginx
    spec:
      containers:
        - name: magical-nginx
          image: 'vikas24775/magicalnginx:latest'
          ports:
            - name: nginx-port
              containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: magical-nginx
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      nodePort: 31304
      name: http
  selector:
    app: magical-nginx

gcloud compute firewall-rules create fw-rule-np1 --allow tcp:31304
