Ingress/ingress-controller/official-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-official-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-official
  template:
    metadata:
      labels:
        app: nginx-official
    spec:
      containers:
        - name: nginx-official
          image: nginx:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      nodePort: 31303
  selector:
    app: nginx-official

gcloud compute firewall-rules create fw-rule-np2 --allow tcp:31303
